# static_with_libs

./: CMakeLists.txt  main.cpp
libs/shared/: CMakeLists.txt
libs/shared_static/: CMakeLists.txt  shared_static.cpp
libs/src/: test.cpp  test.h
task/: CMakeLists.txt  task.cpp  task.h
